# FLask_first_project

./: .gitignore  app.py  models.py  pyproject.toml  settings.py
templates/: create_post.html  edit_post.html  home.html  show_post.html
