[tool.poetry]
name = "flask-first"
version = "0.1.0"
description = ""
authors = ["bakashev <bakashevs@mail.ru>"]
readme = "README.md"
packages = [{include = "flask_first"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-sqlalchemy = "^3.0.3"
requests = "^2.30.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
